# quick-deploy

./: .gitignore  Cargo.toml  README.md  fastly.toml
src/: config.rs  github.rs  main.rs  scdn.rs  templates.rs
src/static/: deploy.html  error.html  index.html  style.css  success.html
