[package]
name = "quick-deploy"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.6.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "^1"
tinytemplate = "^1.2"
toml = "^0.5"
base64 = "^0.13"
anyhow = "^1.0"
sealed_box = "0.1.0"
toml_edit = "0.2.0"
parity-wordlist = "1.3.1"
